--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,20 +25,14 @@
 	<div class="inside"> 
 	    <div class="block first"> 
 	          {% include menu-about.html %}
- 
-		      {% include menu-cylinks.html %}
-		    </div> 
+ 		    </div> 
 	      
 	      <div class="block second"> 
 		    {% include menu-search.html %}
- 
-		        {% include menu-internal.html %}
 		      </div> 
 	        
 	        <div class="block third"> 
-		      {% include menu-blog-nav.html %}
- 
-		          {% include menu-blog-about.html %}
+   	              {% include menu-projects.html %}
 		        </div> 
 		  
 		</div> 
